2003-06-19  William Jon McCann  <mccann@jhu.edu>

	* properties.c: #define gconf key names.
	(load_properties): 
	(reset_properties): Don't leak gconf client.

2003-06-18  William Jon McCann  <mccann@jhu.edu>

	* properties.h: 
	* properties.c: 
	* gnothello.h: 
	* gnothello.c: 
	* network.h: 
	* network.c: Fixed compiler warnings.

2003-06-17  William Jon McCann  <mccann@jhu.edu>

	* gnothello.c (load_pixmaps): Use g_build_filename to
	construct paths.

2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnothello.c: Removing "Are you sure" questions.

	* properties.c (show_properties_dialog): Fix the properties window
	title.

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnothello.c : i18n fixes from Christian Neumair (bug #114875). 

2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* gnothello.c: Removed separators from appbar.

	* properties.c: HIG fixes for preferences dialog.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* gnothello.c: 
	* properties.c: Removed separator from dialogs as in HIG.

2003-06-05  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am (install-data-local): Only install schemas
	if they are requested.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am:Removed the score file creation code, this game
	doesn't keep high scores.

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-05-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnothello.c (about_cb): 
	* properties.c: Use gtk_window_present to show the dialogs.
	Fixes bug #113895, thanks to Steve Chaplin.

2003-04-30  Abel Cheung  <maddog@linux.org.hk>

	* ChangeLog: Convert to UTF-8.

2003-03-24  Ross Burton  <ross@burtonini.com>

	* othello.c (computer_move_3): Actually let the computer player
	move, closing #101996.

2003-03-07  Ross Burton  <ross@burtonini.com>

	* properties.c (load_properties): Add GConf sanity check.
